# mitre-emb3d

./: .gitignore  .mcp.json  .readthedocs.yaml  README.md  config.example.toml  gemini-extension.json  mkdocs.yml  poe.toml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: devcontainer.json
.github/workflows/: publish.yaml
docs/: index.md
docs/cli/: ai-commands.md  core-commands.md  global-options.md  heatmap-commands.md  index.md  mcp-server.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guides/: index.md
docs/guides/configuration/: general.md  index.md  llm-providers.md  property-mapper.md  threat-analyzer.md
src/mitre_emb3d/: __about__.py  __init__.py  __main__.py  _doc_loaders.py  _graph.py  _heatmap.py  _locations.py  _models.py  _stix.py  _types.py
src/mitre_emb3d/ai/: _cli.py  _mitre_introduction.py  _repo.py  _typer_context.py
src/mitre_emb3d/ai/config/: __init__.py  _agent.py  _config.py
src/mitre_emb3d/ai/context/providers/: __init__.py  _naive.py
src/mitre_emb3d/ai/property_mapper/: __init__.py  _agent.py  _app.py  _artifacts.py  _models.py  _prompt.py  _prompts.py  _writer.py
src/mitre_emb3d/ai/repo/: __init__.py  _repo.py  _token_counting.py  _tree.py
src/mitre_emb3d/ai/site_generator/: __init__.py  _generator.py
src/mitre_emb3d/ai/site_generator/static/: style.css
src/mitre_emb3d/ai/site_generator/templates/: base.html  heatmap.html  index.html  property.html  threat.html
src/mitre_emb3d/ai/threat_analyzer/: __init__.py  _agent.py  _app.py  _artifacts.py  _models.py  _prompts.py
src/mitre_emb3d/heatmap/: __init__.py  _cli.py  _models.py  _protocols.py  _utils.py
src/mitre_emb3d/heatmap/backend/: __init__.py  _json.py
src/mitre_emb3d/heatmap/tui/: _app.py  mbed.scss
src/mitre_emb3d/heatmap/tui/widgets/: __init__.py  _resolution.py  _threat_entry.py  _threat_legend.py  _threat_modal.py
src/mitre_emb3d/mcp/: __init__.py  _server.py
src/mitre_emb3d/tui/: _app.py  mbed.scss
src/mitre_emb3d/tui/widgets/: __init__.py  _resolution.py  _threat_entry.py  _threat_legend.py  _threat_modal.py
